--- a/templates/src/main/resources/application.yml
+++ b/templates/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
     port: 8889
 spring:
+    security:
+        user:
+            name: myuser
+            password: mypassword
     cloud:
         config:
             server:
