--- a/templates/src/main/resources/application.yml
+++ b/templates/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
     port: 8889
+encrypt:
+    key: ABCDEFGHAIJKLMNOPQRSTUVWYZ
 spring:
     security:
         user:
@@ -18,3 +20,4 @@ spring:
                             uri: https://github.com/alvaroMaleno/spring-config-server-values
                             search-paths:
                                 - 'station*'
+    
