--- a/templates/src/main/resources/application.yml
+++ b/templates/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server:
     port: 8889
 encrypt:
-    key: ABCDEFGHAIJKLMNOPQRSTUVWYZ
+    key: AVeryTrickyEncriptionKeyWhahaha
 spring:
     security:
         user:
@@ -10,6 +10,8 @@ spring:
     cloud:
         config:
             server:
+                encrypt:
+                    enabled: false
                 git:
                     uri: https://github.com/alvaroMaleno/spring-config-server-dev-values
                     search-paths:
